# PySALM

./: .gitignore  CITATION.cff  KNOWN_ISSUES.md  README.md  addons.py  ai.py  alias.py  analysis.py  commands.py  conf_template.py  custom.py  manager.py  mixer.py  old.pickle  plotting.py  pyproject.toml  requirements.txt  responses.csv  rm.py  stats.py  structure.py  tables.py  texbuilder.py
.github/ISSUE_TEMPLATE/: ai.py  classificators.py  manager.py  requirements.txt
DeepStat/: main.py
views/: desctable.tex  document.tex  graphic.tex  graphic_wraped.tex  table.tex  text.tex
