[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "DeepStat"
version = "0.1.0"
description = "Statistic analysis toolkit."
authors = ["Athalbraht <contact.22cpu@aleeas.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{ include = "DeepStat" }]
homepage = "https://aszadzinski.github.io/DeepStat"
documentation = "https://aszadzinski.github.io/DeepStat/docs"
repository = "https://github.com/aszadzinski/DeepStat"

[tool.poetry.scripts]
deepstat = 'DeepStat.main:main'

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
openai = "^1.30.3"
openpyxl = "^3.1.2"
jinja2 = "^3.1.4"
click = "^8.1.7"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.0"
pingouin = "^0.5.4"
scikit-posthocs = "^0.9.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test]

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

